--- a/index.html
+++ b/index.html
@@ -2,9 +2,134 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title> Седона</title>
   </head>
   <body>
+    <header class="page-headr">
+<nav class="navigation">
+  <img class="page-header-logo" alt="Логотип Города Седоны" src="#">
+  <ul class="navigation-list">
+    <li class="navigation-item">
+      <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+    </li>
+    <li class="navigation-item">
+      <a class="navigation-link" href="about.html">О Седоне</a>
+    </li>
+    <li>
+     <a class="navigation-link" href="fag.html">Гостиницы</a>
+    </li>
+  </ul>
+  <ul class="navigation-user">
+    <li class="navigation-item">
+    <a class="navigation-link" href="#"</a>
+      <span class="visually-hidden">
+         Поиск
+      </span>
+    </li>
+    <li class="navigation-item">
+      <a class="navigation-link" href="#"</a>
+        <span class="visually-hidden">
+          Понравилось
+       </span>
+    </li>
+    <li>
+      <a class="navigation-link" href="#">Хочу сюда</a>
+    </li>
+  </ul>
+</nav>
+    </header>
+  <main class="main-index">
+<h1 class="visually-hidden">Седона</h1>
+ <img class="logo" src="#" alt="Логотип Седоны">
+<p class="text"> Седона — небольшой городок в Аризоне,
+  заслуживающий большего!</p>
+<p class="text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+<section class="advantages">
+  <h2 class="visually-hidden">Преимущества</h2>
+  <ul class="advantages-list">
+    <li class="advantages-item">
+      <h3 class="advantages-title">Настоящий городок</h3>
+     <p class="advantages-description"> Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+    </li>
+     <li class="advantages-item">
+     <img class="picture" src="#" alt="Настоящий городок">
+    </li>
+    <li class="advantages-item">
+      <h3 class="advantages-title">Небольшая площадь</h3>
+      <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+    </li>
+    <li class="advantages-item">
+      <h3 class="advantages-title">Красивая дорога</h3>
+      <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+    </li>
+    <li class="advantages-item">
+      <h3 class="advantages-title">Мало туристов</h3>
+      <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+    </li>
+    <li class="advantages-item">
+     <img class="picture" src="#" alt="Мост дьявола">
+    </li>
+    <li class="advantages-item">
+     <h3 class="advantages-title">Там есть мост дьявола</h3>
+     <p class="advantages-description"> Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+    </li>
+
+  </ul>
+  <ul class="advantages-list">
+    <li class="advantages-item">
+      <h3 class="advantages-title">Жильё</h3>
+      <p class="advantages-description">Рекомендуем пожитьв настоящем мотеле,всё как в кино!</p>
+    </li>
+    <li class="advantages-item">
+      <h3 class="advantages-title">Еда</h3>
+      <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+    </li>
+    <li class="advantages-item">
+      <h3 class="advantages-title">Сувениры</h3>
+      <p class="advantages-description">Не только китайского,но и настоящего местного производства!</p>
+    </li>
+  </ul>
+</section>
+<section class="appointment">
+      <h2 class="apointment-title">Заинтересовались?</h2>
+      <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</br></p>
+        <a class="button" href="https://echo.htmlacademy.ru/">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
+</section>
+<section class="newsletter">
+      <h2 class="page-main-title">Подпишитесь на рассылку</h2>
+      <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</br<</p>
+      <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post"></form>
+      <input class="field"  placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
+      <button class="button newsletter-button" type="submit">
+        Подписаться
+      </button>
+</section>
+  </main>
+  <footer class="page-footer">
+<section class="footer-social">
+  <ul class="footer-social-list">
+  <li class="footer-social-item">
+    <a class="button" href="https://vk.com/htmlacademy">
+      <span class="visually-hidden">ВКонтакте</span>
+    </a>
+  </li>
+  <li class="footer-social-item">
+      <a class="button" href=" https://t.me/htmlacademy">
+        <span class="visually-hidden">Телеграм</span>
+      </a>
+  </li>
+  <li class="footer-social-item">
+    <a class="button" href=" https://www.youtube.com/user/htmlacademyru">
+      <span class="visually-hidden">Ютуб</span>
+    </a>
+  </li>
+  </ul>
+</section>
+<section class="footer-contacts">
+  <a class="footer-contacts-address-phone" href="tel:+78121212">+7 (812) 812-12-12</a>
+</section>
+    <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+  </footer>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
