Добавление контентных изображений

--- a/catalog.html
+++ b/catalog.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <header class="page-headr">
+  <a class="logo" href="index.html">
+    <img class="page-header-logo" src="images/logo.svg" width="138" height="64" alt="Логотип Города Седоны">
+  </a>
 <nav class="navigation">
-  <img class="page-header-logo" alt="Логотип Города Седоны" src="#">
   <ul class="navigation-list">
     <li class="navigation-item">
       <a class="navigation-link" href="about.html">Главная</a>
@@ -115,7 +117,7 @@
         <ul class="product-list">
          <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="#" alt="Amara Resort & Spa">
+            <img class="product-card-image" src="images/amara_resort_spa.jpg" width="300" height="212" alt="Amara Resort & Spa">
             <h4 class="product-card-title">Amara Resort & Spa</h4>
           </a>
           <span class="text">Гостиница</span>
@@ -126,7 +128,7 @@
          </li>
          <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="#" alt="Villas at Poco Diablo">
+            <img class="product-card-image" src="images/villas_at_poco_diablo.jpg" width="300" height="212" alt="Villas at Poco Diablo">
             <h4 class="product-card-title">Villas at Poco Diablo</h4>
           </a>
           <span class="text">Гостиница</span>
@@ -137,7 +139,7 @@
          </li>
          <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="#" alt="Desert Quail Inn">
+            <img class="product-card-image" src="images/desert_quail_inn.jpg" width="300" height="212" alt="Desert Quail Inn">
             <h4 class="product-card-title">Desert Quail Inn</h4>
           </a>
           <span class="text">Гостиница</span>
@@ -148,7 +150,7 @@
          </li>
          <li class="product-card">
           <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="#" alt="GreenTree Inn">
+            <img class="product-card-image" src="images/greentree_inn.jpg" width="300" height="212" alt="GreenTree Inn">
             <h4 class="product-card-title">GreenTree Inn</h4>
           </a>
           <span class="text">Гостиница</span>
