--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title> Седона</title>
+    <title>Седона</title>
   </head>
   <body>
     <header class="page-headr">
+   <a class="logo" href="index.html">
+    <img class="page-header-logo" src="images/logo.svg" width="138" height="64" alt="Логотип Города Седоны">
+   </a>
 <nav class="navigation">
-  <img class="page-header-logo" alt="Логотип Города Седоны" src="#">
   <ul class="navigation-list">
     <li class="navigation-item">
       <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
@@ -40,7 +42,7 @@
     </header>
   <main class="main-index">
 <h1 class="visually-hidden">Седона</h1>
- <img class="logo" src="#" alt="Логотип Седоны">
+ <img class="logo" src="images/welcome_to_sedona.svg" width="458" height="352" alt="Логотип Седоны">
 <p class="text"> Седона — небольшой городок в Аризоне,
   заслуживающий большего!</p>
 <p class="text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -52,7 +54,7 @@
      <p class="advantages-description"> Седона — не аттракцион для туристов, там течёт своя жизнь</p>
     </li>
      <li class="advantages-item">
-     <img class="picture" src="#" alt="Настоящий городок">
+     <img class="picture" src="images/real_town.jpg" width="800" height="384" alt="Настоящий городок">
     </li>
     <li class="advantages-item">
       <h3 class="advantages-title">Небольшая площадь</h3>
@@ -67,7 +69,7 @@
       <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
     </li>
     <li class="advantages-item">
-     <img class="picture" src="#" alt="Мост дьявола">
+     <img class="picture" src="images/devil's_bridge.jpg" width="800" height="384" alt="Мост дьявола">
     </li>
     <li class="advantages-item">
      <h3 class="advantages-title">Там есть мост дьявола</h3>
