Добавление контентных картинок

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
   </footer>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе в «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
   </body>
 </html>
