--- a/catalog.html
+++ b/catalog.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>Каталог</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
+
   <body>
     <header class="page-headr">
-  <a class="logo" href="index.html">
-    <img class="page-header-logo" src="images/logo.svg" width="138" height="64" alt="Логотип Города Седоны">
-  </a>
-<nav class="navigation">
-  <ul class="navigation-list">
-    <li class="navigation-item">
-      <a class="navigation-link" href="about.html">Главная</a>
-    </li>
-    <li class="navigation-item">
-      <a class="navigation-link" href="about.html">О Седоне</a>
-    </li>
-    <li>
-     <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
-    </li>
-  </ul>
-  <ul class="navigation-user">
-    <li class="navigation-item">
-    <a class="navigation-link" href="#"</a>
-      <span class="visually-hidden">
-         Поиск
-      </span>
-    </li>
-    <li class="navigation-item">
-      <a class="navigation-link" href="#"</a>
-        <span class="visually-hidden">
-          Понравилось
-       </span>
-    </li>
-    <li>
-      <a class="navigation-link" href="#">Хочу сюда</a>
-    </li>
-  </ul>
-</nav>
+      <a class="logo" href="index.html">
+        <img class="page-header-logo" src="images/logo.svg" width="138" height="64" alt="Логотип Города Седоны">
+      </a>
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">О Седоне</a>
+          </li>
+          <li>
+            <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#" </a>
+              <span class="visually-hidden">
+                Поиск
+              </span>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#" </a>
+              <span class="visually-hidden">
+                Понравилось
+              </span>
+          </li>
+          <li>
+            <a class="navigation-link" href="#">Хочу сюда</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main class="main-inner">
       <header class="inner-header">
@@ -54,50 +57,50 @@
             <legend class="catalog-filter-title">Инфраструктура:</legend>
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
-            <label class="control">
-              <input class="control-input" type="checkbox" name="swimming pool" checked>
-              Бассейн
-            </label>
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="swimming pool" checked>
+                  Бассейн
+                </label>
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
                   <input class="control-input" type="checkbox" name="parking" checked>
                   Парковка
                 </label>
-                  </li>
-                  <li class="catalog-filter-item">
-                    <label class="control">
-                      <input class="control-input" type="checkbox" name="wi-fi">
-                      Wi-Fi
-                    </label>
-                      </li>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="wi-fi">
+                  Wi-Fi
+                </label>
+              </li>
           </fieldset>
 
           <fieldset class="catalog-filter-group">
-          <legend class="catalog-filter-title">Тип жилья:</legend>
-          <ul class="catalog-filter-list">
-            <li class="catalog-filter-item">
-          <label class="control">
-            <input class="control-input" type="radio" name="product-group" checked>
-            Гостиница
-          </label>
-            </li>
-            <li class="catalog-filter-item">
-              <label class="control">
-                <input class="control-input" type="radio" name="product-group">
-                Мотель
-              </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="radio" name="product-group">
-                    Апартаменты
-                  </label>
-                    </li>
-        </fieldset>
+            <legend class="catalog-filter-title">Тип жилья:</legend>
+            <ul class="catalog-filter-list">
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="control-input" type="radio" name="product-group" checked>
+                  Гостиница
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="control-input" type="radio" name="product-group">
+                  Мотель
+                </label>
+              </li>
+              <li class="catalog-filter-item">
+                <label class="control">
+                  <input class="control-input" type="radio" name="product-group">
+                  Апартаменты
+                </label>
+              </li>
+          </fieldset>
 
-          <button class="button" type="submit">Применить</button>
-          <button class="button" type="submit">Сбросить</button>
+          <button class="button-apply" type="submit">Применить</button>
+          <button class="button-throw_off" type="submit">Сбросить</button>
         </form>
         <h3 class="inner-title">Найдено гостиниц: 38</h3>
         <select class="select-control" aria-label="Сортировка">
@@ -115,77 +118,125 @@
           <span class="visually-hidden">Показать список</span>
         </a>
         <ul class="product-list">
-         <li class="product-card">
-          <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="images/amara_resort_spa.jpg" width="300" height="212" alt="Amara Resort & Spa">
-            <h4 class="product-card-title">Amara Resort & Spa</h4>
-          </a>
-          <span class="text">Гостиница</span>
-          <span class="product-card-price">От 4000 ₽</span>
-          <a class="product-card-button button" href="#">подробнее</a>
-          <a class="product-card-button button" href="#">в избранное</a>
-          <span class="text">Рейтинг: 8,5</span>
-         </li>
-         <li class="product-card">
-          <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="images/villas_at_poco_diablo.jpg" width="300" height="212" alt="Villas at Poco Diablo">
-            <h4 class="product-card-title">Villas at Poco Diablo</h4>
-          </a>
-          <span class="text">Гостиница</span>
-          <span class="product-card-price">От 5000 ₽</span>
-          <a class="product-card-button button" href="#">подробнее</a>
-          <a class="product-card-button button" href="#">в избранном</a>
-          <span class="text">Рейтинг: 9,2</span>
-         </li>
-         <li class="product-card">
-          <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="images/desert_quail_inn.jpg" width="300" height="212" alt="Desert Quail Inn">
-            <h4 class="product-card-title">Desert Quail Inn</h4>
-          </a>
-          <span class="text">Гостиница</span>
-          <span class="product-card-price">От 2500 ₽</span>
-          <a class="product-card-button button" href="#">подробнее</a>
-          <a class="product-card-button button" href="#">в избранное</a>
-          <span class="text">Рейтинг: 6,9</span>
-         </li>
-         <li class="product-card">
-          <a class="product-card-link" href="product.html">
-            <img class="product-card-image" src="images/greentree_inn.jpg" width="300" height="212" alt="GreenTree Inn">
-            <h4 class="product-card-title">GreenTree Inn</h4>
-          </a>
-          <span class="text">Гостиница</span>
-          <span class="product-card-price">От 1500 ₽</span>
-          <a class="product-card-button button" href="#">подробнее</a>
-          <a class="product-card-button button" href="#">в избранное</a>
-          <span class="text">Рейтинг: 5,0</span>
-         </li>
+          <li class="product-card">
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="images/amara_resort_spa.jpg" width="300" height="212"
+                alt="Amara Resort & Spa">
+              <h4 class="product-card-title">Amara Resort & Spa</h4>
+            </a>
+            <span class="text-price">Гостиница</span>
+            <span class="product-card-price">От 4000 ₽</span>
+            <a class="product-card-button button_detailed" href="#">подробнее</a>
+            <a class="product-card-button button_favourites" href="#">в избранное</a>
+          <li class="rating stars">
+            <ul>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+            </ul>
+          </li>
+          <span class="text-rating">Рейтинг: 8,5</span>
+          </li>
+          <li class="product-card">
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="images/villas_at_poco_diablo.jpg" width="300" height="212"
+                alt="Villas at Poco Diablo">
+              <h4 class="product-card-title">Villas at Poco Diablo</h4>
+            </a>
+            <span class="text-price">Гостиница</span>
+            <span class="product-card-price">От 5000 ₽</span>
+            <a class="product-card-button button_detailed" href="#">подробнее</a>
+            <a class="product-card-button button_favourites" href="#">в избранном</a>
+          <li class="rating stars">
+            <ul>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+            </ul>
+          </li>
+          <span class="text-rating">Рейтинг: 9,2</span>
+          </li>
+          <li class="product-card">
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="images/desert_quail_inn.jpg" width="300" height="212"
+                alt="Desert Quail Inn">
+              <h4 class="product-card-title">Desert Quail Inn</h4>
+            </a>
+            <span class="text-price">Гостиница</span>
+            <span class="product-card-price">От 2500 ₽</span>
+            <a class="product-card-button button_detailed" href="#">подробнее</a>
+            <a class="product-card-button button_favourites" href="#">в избранное</a>
+          <li class="rating stars">
+            <ul>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+            </ul>
+          </li>
+          <span class="text-rating">Рейтинг: 6,9</span>
+          </li>
+          <li class="product-card">
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="images/greentree_inn.jpg" width="300" height="212"
+                alt="GreenTree Inn">
+              <h4 class="product-card-title">GreenTree Inn</h4>
+            </a>
+            <span class="text-price">Гостиница</span>
+            <span class="product-card-price">От 1500 ₽</span>
+            <a class="product-card-button button_detailed" href="#">подробнее</a>
+            <a class="product-card-button button_favourites" href="#">в избранное</a>
+          <li class="rating stars">
+            <ul>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+              <li><img class="rating stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+              </li>
+            </ul>
+          </li>
+          <span class="text-rating">Рейтинг: 5,0</span>
+          </li>
         </ul>
         <ul class="pagination">
-         <li class="pagination-item">
-          <a class="pagination-link pagination-current">1</a>
-         </li>
-         <li class="pagination-item">
-          <a class="pagination-link" href="#">2</a>
-         </li>
-         <li class="pagination-item">
-          <a class="pagination-link" href="#">3</a>
-         </li>
-         <li class="pagination-item">
-          <a class="pagination-link" href="#">4</a>
-         </li>
-         <li class="pagination-item">
-          <a class="pagination-link" href="#">...</a>
-         </li>
-         <li class="pagination-item">
-          <a class="pagination-link" href="#">10</a>
-         </li>
+          <li class="pagination-item">
+            <a class="pagination-link pagination-current">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">...</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">10</a>
+          </li>
         </ul>
       </section>
-      <section class="newsletter">
-        <h2 class="page-main-title">Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</br<</p>
+      <section class="newsletter-catalog">
+        <h2 class="page-main-title-catalog">Подпишитесь на рассылку</h2>
+        <p class="text-newsletter-catalog">Только полезная информация и никакого спама,<br> честное бойскаутское!</br<<
+            /p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post"></form>
-        <input class="field"  placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
+        <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
+          required>
         <button class="button newsletter-button" type="submit">
           Подписаться
         </button>
@@ -194,27 +245,31 @@
     <footer class="page-footer">
       <section class="footer-social">
         <ul class="footer-social-list">
-        <li class="footer-social-item">
-          <a class="button" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden">ВКонтакте</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
+          <li class="footer-social-item">
+            <a class="button" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
             <a class="button" href=" https://t.me/htmlacademy">
               <span class="visually-hidden">Телеграм</span>
             </a>
-        </li>
-        <li class="footer-social-item">
-          <a class="button" href=" https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">Ютуб</span>
-          </a>
-        </li>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href=" https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
         </ul>
       </section>
       <section class="footer-contacts">
         <a class="footer-contacts-address-phone" href="tel:+78121212">+7 (812) 812-12-12</a>
       </section>
-          <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
-        </footer>
+      <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+        <img class="page-footer-logo" src="images/html_academy.svg" width="114.9" height="32.9"
+          alt="Логотип HTML-academy">
+      </a>
+    </footer>
   </body>
+
 </html>
