Исправление ошибок Базовой стилизации

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
       </nav>
     </header>
     <main class="main-index">
+      <div class="baner">
       <h1 class="visually-hidden">Седона</h1>
       <img class="logo" src="images/welcome_to_sedona.svg" width="458" height="352" alt="Логотип Седоны">
+    </div>
       <p class="text-heading"> Седона — небольшой городок в Аризоне,
         заслуживающий большего!</p>
       <p class="text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -53,8 +55,8 @@
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
           <li class="advantages-item">
-            <div class="blue">
-              <div class="blue-text">
+            <div class="help blue">
+              <div class="help-text">
                 <h3 class="advantages-title real_town">Настоящий городок</h3>
                 <p class="advantages-description real_town"> Седона — не аттракцион для туристов, там течёт своя жизнь
                 </p>
@@ -87,9 +89,9 @@
             </div>
           </li>
           <li class="advantages-item">
-            <div class="blue">
+            <div class="help blue">
               <img class="picture" src="images/devil's_bridge.jpg" width="800" height="384" alt="Мост дьявола">
-              <div class="blue-text">
+              <div class="help-text">
                 <h3 class="advantages-title devils_bridge">Там есть мост дьявола</h3>
                 <p class="advantages-description devils_bridge"> Да, по нему можно пройти! Если вы осмелитесь,
                   разумеется</p>
