--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div class="container">
     <header class="page-header">
       <a class="logo" href="index.html">
         <img class="page-header-logo" src="images/logo.svg" width="138" height="64" alt="Логотип Города Седоны">
@@ -43,14 +44,14 @@
         </ul>
       </nav>
     </header>
-    <main class="main-index">
+    <main class="main-container main-index">
       <div class="baner">
       <h1 class="visually-hidden">Седона</h1>
       <img class="logo" src="images/welcome_to_sedona.svg" width="458" height="352" alt="Логотип Седоны">
     </div>
       <p class="text-heading"> Седона — небольшой городок в Аризоне,
         заслуживающий большего!</p>
-      <p class="text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      <p class="text reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
@@ -64,6 +65,7 @@
               <img class="picture" src="images/real_town.jpg" width="800" height="384" alt="Настоящий городок">
             </div>
           </li>
+          <div class="advantages-help">
           <li class="advantages-item">
             <div class="small-area">
               <div class="small-area beautiful-road tourist text">
@@ -88,6 +90,7 @@
               </div>
             </div>
           </li>
+        </div>
           <li class="advantages-item">
             <div class="help blue">
               <img class="picture" src="images/devil's_bridge.jpg" width="800" height="384" alt="Мост дьявола">
@@ -101,6 +104,7 @@
 
         </ul>
         <ul class="advantages-list">
+          <div class="advantages-help">
           <li class="advantages-item">
             <div class="housing">
               <div class="housing food souvenirs">
@@ -124,12 +128,13 @@
                 <p class="advantages-description">Не только китайского,но и настоящего местного производства!</p>
               </div>
             </div>
+          </div>
           </li>
         </ul>
       </section>
       <section class="appointment">
         <h2 class="apointment-title">Заинтересовались?</h2>
-        <p class="text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в
+        <p class="text-appointment">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в
           Седоне</br></p>
         <a class="button-search" href="https://echo.htmlacademy.ru/">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
       </section>
@@ -137,11 +142,13 @@
         <h2 class="page-main-title">Подпишитесь на рассылку</h2>
         <p class="text-newsletter">Только полезная информация и никакого спама,<br> честное бойскаутское!</br<< /p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post"></form>
+        <div class="help-newsletter">
         <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
           required>
         <button class="button newsletter-button" type="submit">
           Подписаться
         </button>
+      </div>
       </section>
     </main>
     <footer class="page-footer">
@@ -173,9 +180,9 @@
       </a>
     </footer>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе в «<a
+    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе  «<a
         href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    </div>
   </body>
 
 </html>
