--- a/index.html
+++ b/index.html
@@ -27,16 +27,19 @@
           </ul>
           <ul class="navigation-user">
             <li class="navigation-item-5">
-              <a class="navigation-link search" href="#">
-              </a>
+              <button class="navigation-link search" type="button">
+                <img class="navigation-link-icon" src="images/search.svg"  width="20" height="20" alt="Поиск">
+              </button>
               <span class="visually-hidden">
                 Поиск
               </span>
             </li>
             <li class="navigation-item-5">
-              <a class="navigation-link like" href="#"></a>
+              <button class="navigation-link like" type="button">
+                <img class="navigation-link-icon" src="images/heart.svg"  width="20" height="20" alt="Избранное">
+              </button>
               <span class="visually-hidden">
-                Понравилось
+                Избранное
               </span>
             </li>
             <li>
