--- a/index.html
+++ b/index.html
@@ -26,24 +26,29 @@
             </li>
           </ul>
           <ul class="navigation-user">
-            <li class="navigation-item-5">
+            <li class="navigation-item">
               <button class="navigation-link search" type="button">
-                <img class="navigation-link-icon" src="images/search.svg"  width="20" height="20" alt="Поиск">
+                <svg class="navigation-link-icon" aria-hidden="true" focusable="false" width="20" height="20"
+                  viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="m19.5 18-3.7-3.67c1-1.3 1.7-2.98 1.7-4.87a8 8 0 0 0-8-7.96c-4.4 0-8 3.68-8 8.06a8 8 0 0 0
+                    12.9 6.26l3.7 3.68 1.4-1.5Zm-10-2.48a6 6 0 0 1-6-5.96 6 6 0 0 1 12 0 6 6 0 0 1-6 5.96Z"
+                    fill="#000" />
+                </svg>
               </button>
               <span class="visually-hidden">
                 Поиск
               </span>
             </li>
-            <li class="navigation-item-5">
+            <li class="navigation-item">
               <button class="navigation-link like" type="button">
-                <img class="navigation-link-icon" src="images/heart.svg"  width="20" height="20" alt="Избранное">
+                <img class="navigation-link-icon" src="images/heart.svg" width="20" height="20" alt="Избранное">
               </button>
               <span class="visually-hidden">
                 Избранное
               </span>
             </li>
             <li>
-              <a class="navigation-link come_here" href="#">Хочу сюда</a>
+              <a class="navigation-link come_here" href="#">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
@@ -53,7 +58,7 @@
           <h1 class="visually-hidden">Седона</h1>
           <img class="logo" src="images/welcome_to_sedona.svg" width="458" height="352" alt="Логотип Седоны">
         </div>
-        <p class="text-heading"> Седона-небольшой городок в Аризоне,<br>
+        <p class="text-heading"> Седона — небольшой городок в Аризоне,<br>
           заслуживающий большего!</br></p>
         <p class="text reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <section class="advantages">
@@ -146,13 +151,13 @@
             </li>
             <li class="footer-social-item">
               <a class="button-tg" href=" https://t.me/htmlacademy">
-                <img class="footer-icon" src="images/tg.svg" width="24" height="14" alt="Телеграм">
+                <img class="footer-icon" src="images/tg.svg" width="18" height="16" alt="Телеграм">
                 <span class="visually-hidden">Телеграм</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button-youtube" href=" https://www.youtube.com/user/htmlacademyru">
-                <img class="footer-icon" src="images/youtube.svg" width="24" height="14" alt="Ютуб">
+                <img class="footer-icon" src="images/youtube.svg" width="22" height="17" alt="Ютуб">
                 <span class="visually-hidden">Ютуб</span>
               </a>
             </li>
