--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <li class="navigation-item">
               <button class="navigation-link like" type="button">
                 <img class="navigation-link-icon" src="images/heart.svg" width="20" height="20" alt="Избранное">
+                <span class="count-like">12</span>
               </button>
               <span class="visually-hidden">
                 Избранное
@@ -76,16 +77,15 @@
             </li>
             <div class="advantages-help">
               <li class="advantages-item">
-                <h3 class="advantages-title">Небольшая площадь</h3>
+                <h3 class="advantages-title decorative_element">Небольшая площадь</h3>
                 <p class="advantages-description">Все достопримечательности находятся очень близко</p>
               </li>
               <li class="advantages-item">
-                <h3 class="advantages-title">Красивая дорога</h3>
+                <h3 class="advantages-title decorative_element">Красивая дорога</h3>
                 <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </li>
               <li class="advantages-item">
-
-                <h3 class="advantages-title">Мало туристов</h3>
+                <h3 class="advantages-title decorative_element">Мало<br> туристов</h3>
                 <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
               </li>
             </div>
@@ -93,7 +93,7 @@
               <div class="help blue">
                 <img class="picture" src="images/devil's_bridge.jpg" width="800" height="384" alt="Мост дьявола">
                 <div class="help-text">
-                  <h3 class="advantages-title-devils_bridge">Там есть мост дьявола</h3>
+                  <h3 class="advantages-title-devils_bridge">Там есть<br> мост дьявола</h3>
                   <p class="advantages-description-devils_bridge"> Да, по нему можно пройти! Если вы осмелитесь,
                     разумеется</p>
                 </div>
@@ -105,39 +105,106 @@
             <div class="advantages-help">
               <li class="advantages-item">
                 <img class="advantages-icon" src="images/house.svg" width="75" height="72" alt="Дом">
-                <h3 class="advantages-title">Жильё</h3>
-                <p class="advantages-description">Рекомендуем пожитьв настоящем мотеле,всё как в кино!</p>
+                <h3 class="advantages-title decorative_element-none">Жильё</h3>
+                <p class="advantages-description">Рекомендуем пожить<br> в настоящем мотеле,<br>всё как в кино!</p>
               </li>
               <li class="advantages-item">
                 <img class="advantages-icon" src="images/food.svg" width="75" height="72" alt="Еда">
-                <h3 class="advantages-title">Еда</h3>
-                <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                <h3 class="advantages-title decorative_element-none">Еда</h3>
+                <p class="advantages-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не
+                  разочаруетесь!</p>
               </li>
               <li class="advantages-item">
                 <img class="advantages-icon" src="images/souvenirs.svg" width="75" height="72" alt="Сувениры">
-                <h3 class="advantages-title">Сувениры</h3>
-                <p class="advantages-description">Не только китайского,но и настоящего местного производства!</p>
+                <h3 class="advantages-title decorative_element-none">Сувениры</h3>
+                <p class="advantages-description">Не только китайского,<br>но и настоящего местного<br> производства!
+                </p>
             </div>
             </li>
           </ul>
         </section>
-        <section class="appointment">
+        <section class="apointment">
           <h2 class="apointment-title">Заинтересовались?</h2>
-          <p class="text-appointment">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в
+          <p class="text-appointment">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения
+            гостиниц в
             Седоне</p>
           <a class="button-search" href="https://echo.htmlacademy.ru/">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
+
+          <div class="popover popover-appointment">
+            <div class="popover-content">
+              <div class="popover-head">
+              <h2 class="popover-title">Поиск гостиницы в Седоне</h2>
+              <button class="popover-close" type="button">
+                <svg aria-hidden="true" focusable="false" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.5 1.78 13.2.5 7.49 6.2 1.79.5.48 1.8l5.7 5.7-5.7 5.7 1.3 1.3 5.7-5.7 5.7 5.7 1.3-1.3-5.7-5.7 5.7-5.7Z" fill="#000"/>
+                </svg>
+                <span class="visually-hidden">Закрыть</span>
+                </button>
+              </div>
+              <form class="popover-form" action="https://echo.htmlacademy.ru/" method="post">
+
+                <div class="field-group popover-form-date">
+                  <label class="form-label" for="popover-date-1">Дата заезда:</label>
+                  <input class="field-popover" type="text" id="popover-date-1" name="popover-date-1"
+                    placeholder="27 апреля 2020">
+                    <span class="date-1">Мы не можем отправить вас в прошлое.</span>
+                </div>
+
+                <div class="field-group popover-form-date">
+                  <label class="form-label" for="popover-date-2">Дата выезда:</label>
+                  <input class="field-popover" type="text" id="popover-date-2" name="popover-date-2"
+                    placeholder="1 сентября 2023">
+                    <span class="date-2">На эти даты есть свободные номера. Пока есть.</span>
+                </div>
+
+                <div class="popover-form-piople-help">
+                <div class="field-group popover-form-piople">
+                <span class="help-popover">Взрослые:</span>
+                <div class="popover-rithg">
+                  <div class="popover-slider">
+                    <button type="button" class="minus slider-btn">-</button>
+                    <input class="number" type="text" value="2">
+                    <button type="button" class="plus slider-btn">+</button>
+                  </div>
+                </div>
+                </div>
+
+                  <div class="popover-slaider-child">
+                    <div>
+                    <span class="help-popover help-popover-children">Дети:</span>
+                    <img class="popover-icon" src="images/popover_icon.png" width="26" height="26" alt="Правила для детей">
+                    </div>
+                    <div class="popover-rithg">
+                      <div class="popover-slider">
+                        <button type="button" class="minus slider-btn">-</button>
+                        <input class="number" type="text" value="2">
+                        <button type="button" class="plus slider-btn">+</button>
+                      </div>
+                    </div>
+                    <div class="popover-slaider-child-icon">
+                      <p class="popover-slaider-child-text">
+                        Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети <br>до 6 лет размещаются<br> бесплатно.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <button class="popover-search" type="button">Найти</button>
+              </form>
+            </div>
+          </div>
+
         </section>
         <section class="newsletter">
           <h2 class="page-main-title">Подпишитесь на рассылку</h2>
-          <p class="text-newsletter">Только полезная информация и никакого спама,честное бойскаутское!</p>
-          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post"></form>
-          <div class="help-newsletter">
-            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
-              required>
-            <button class="button newsletter-button" type="submit">
-              Подписаться
-            </button>
-          </div>
+          <p class="text-newsletter">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
+          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+            <div class="help-newsletter">
+              <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
+                required>
+              <button class="button newsletter-button" type="submit">
+                Подписаться
+              </button>
+            </div>
+          </form>
         </section>
       </main>
       <footer class="page-footer">
@@ -145,19 +212,20 @@
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a class="button-vk" href="https://vk.com/htmlacademy">
-                <img class="footer-icon" src="images/vk.svg" width="24" height="14" alt="ВКонтакте">
+                <svg  class="footer-icon" aria-hidden="true" focusable="false" width="25" height="15" viewBox="0 0 25 15"  xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z" />
+                </svg>
                 <span class="visually-hidden">ВКонтакте</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button-tg" href=" https://t.me/htmlacademy">
-                <img class="footer-icon" src="images/tg.svg" width="18" height="16" alt="Телеграм">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z" fill="#83B3D3"/></svg>
                 <span class="visually-hidden">Телеграм</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button-youtube" href=" https://www.youtube.com/user/htmlacademyru">
-                <img class="footer-icon" src="images/youtube.svg" width="22" height="17" alt="Ютуб">
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="23" height="18" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18.94.36H3.51C1.65.36.33 1.95.33 3.76v10.09c0 1.91 1.32 3.5 3.18 3.5h15.65c1.64 0 3.17-1.59 3.17-3.4V3.76c-.22-1.8-1.53-3.4-3.39-3.4ZM7.99 12.89V4.82l7.34 4.04-7.34 4.03Z" fill="#83B3D3"/></svg>
                 <span class="visually-hidden">Ютуб</span>
               </a>
             </li>
