--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <p class="advantages-description">Все достопримечательности находятся очень близко</p>
               </li>
               <li class="advantages-item">
-                <h3 class="advantages-title decorative_element">Красивая дорога</h3>
+                <h3 class="advantages-title decorative_element">Красивая<br> дорога</h3>
                 <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </li>
               <li class="advantages-item">
@@ -172,7 +172,7 @@
                   </div>
 
                   <div class="popover-slaider-child">
-                    <div>
+                    <div class="children">
                       <span class="help-popover help-popover-children">Дети:</span>
                       <img class="popover-icon" src="images/popover_icon.png" width="26" height="26"
                         alt="Правила для детей">
